--- a/client/src/Components/LoginSignUp/LoginSignUp.css
+++ b/client/src/Components/LoginSignUp/LoginSignUp.css
@@ -1,10 +1,15 @@
-.container{
+/* styles.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+/* .container{
     display: flex;
     flex-direction: column;
     margin: auto;
     background: #fff;
     padding-bottom: 80px;
-}
+} */
 .header{
     display: flex;
     flex-direction: column;
@@ -31,6 +36,14 @@
     flex-direction: row;
     gap: 30px;
 }
+.input1{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    background: #eaeaea;
+    border-radius: 6px;
+    /* border-radius: 6px; */
+}
 .input{
     display: flex;
     align-items: center;
@@ -38,13 +51,24 @@
     background: #eaeaea;
     border-radius: 6px;
 }
+.input input{
+    height: 50px;
+    width: 200px;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #797979;
+    font-size: 19px;
+}
 .img1 {
-    width: 20px; /* Set your desired width */
-    height: 20px; /* Set your desired height */
-    margin-right: 10px; /* Adjust as needed */
+    width: 20px; 
+    height: 20px; 
+    margin:  0px, 30px;
   }
 
-
+.user_icon{
+    size: 500px;
+}
 @media screen and (max-width:600px) 
 {
     .inputs{
